# skole

5sem/: .gitignore
5sem/bionano/ov1/: ov1.ipynb
5sem/bionano/ov2/: ov2.ipynb  ov2.md  ov2.py
5sem/bionano/ov3/: ov3.ipynb
5sem/bionano/ov4/: ov4.ipynb
5sem/bionano/ov5/: ov5.ipynb
5sem/kvante/: ov4.py
5sem/matnano/ov1/: Cargo.toml
5sem/matnano/ov4/: ov4.ipynb  ov4.md
5sem/matnano/ov8/: monolayer.ipynb
5sem/matnano/python/: ov1.ipynb
5sem/tools/afm/: cdrom_afm.nid  importing_afm_data_into_hyperspy_for_plotting.ipynb
5sem/tools/eksamen/: 1e_eds.ipynb  1f_haadf.ipynb  1h_sed.ipynb  eksamen.md
5sem/tools/fib/: .gitignore  02_basics_of_image_analysis_and_plotting.ipynb  _oving.html  _oving.ipynb  analyse.ipynb
5sem/tools/sem/: .gitignore  EDS.ipynb  vanlig_sem.ipynb
6sem/numfys/: .gitignore  Activate.ps1  Cargo.toml  Dev.ps1  README.md  lib_list.md
6sem/numfys/nopy/: Cargo.toml
6sem/numfys/nopy/src/: main.rs
6sem/numfys/smumerix/: .gitignore  Cargo.toml  README.md  lib_list.md  pyproject.toml  requirements.txt
6sem/numfys/smumerix/_python/: ex1.py  preex.py  test.py
6sem/numfys/smumerix/ex1/: ex1.py  ex2.py  ex3.py  ex4.py  test_4.py
6sem/numfys/smumerix/ex1/report/: report.md
6sem/numfys/smumerix/smumerix/: __init__.py  __init__.pyi  preex.pyi  smumerix.pyi
6sem/numfys/smumerix/src/: ex0.rs  ex1.rs  lib.rs  main.rs
6sem/numfys/smumerix/src/core/: random_walk.rs
6sem/numfys/smumerix/src/core/edg/: tests.rs
6sem/numfys/smumerix/src/ex1/: edg.rs  mod.rs
6sem/pyo3test/: Cargo.toml  pyproject.toml
6sem/pyo3test/src/: lib.rs
(+86 files in other folders)
