[package]
name = "nopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smumerix-core = { path = "../smumerix-core"}
anyhow = "1.0.68"
approx = "0.5.1"
nalgebra = "0.32.1"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-glutin_window = "0.70.1"
rand = "0.8.5"

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
